# Learn_Python

./: .gitignore  Learn_Python.epj  Learn_Python.kdev4  README.md  __init__.py  note.md  note.md.backup  poetry.lock.BK  pyproject.toml  pyproject.toml.BK  pyproject.toml.NEW.BAK  ruff-OLD.toml  ruff.toml  setup.cfg  where_python.py
.VSCodeCounter/2021-05-14_16-19-01/: details.md  results.csv  results.md  results.txt
.kdev4/: Learn_Python.kdev4
.tours/: test.tour
01-A_Byte_of_Python/: 00-cover.py  000-cover.py  001-preamble.py  002-introduction.py  003-installation.py  004-first_steps.py  005-basics.py  006-operators_and_expressions.py  007-flow_of_commands.py  008-functions.py  009-modules.py  01-preamble.py  02-introduction.py  03-installation.py  04-first_steps.py  05-basics.py  06-operators_and_expressions.py
01-first_steps/03/: helloworld
01-organizacija-rabochego-processa/: 01-nastrojka-vscode-dlja-Python.html
01-Основы Python/: index.html  python.html
01_A_Byte_of_Python/: 000_cover.py  001_preamble.py  002_introduction.py  003_installation.py  004_first_steps.py  005_basics.py  006_operators_and_expressions.py  007_flow_of_commands.py  008_functions.py  009_modules.py  010_data_structures.py
01_A_Byte_of_Python/006_operators_and_expressions/: expression.py
learn-python/: predisloviye.html
learn-python-gaddis/: predisloviye.html
learn-python-gaddis/01-vvedeniye-v-komp'yutery-i-programmirovaniye/: 1.2-apparatnoye-i-programmnoye-obespecheniye.html  1.3-kak-komp'yutery-khranyat-dannyye.html
learn-python-gaddis/x3-nastroyka-sredy-razrabotki-python/: 01-redaktor-ide-dlya-Python.html
learn-python-selfedu/01-pervoye-znakomstvo/: 01-pervoye-znakomstvo.md  01.01-kak-pravilno-prokhodit-etot-kurs.md  01.02-pervoye-znakomstvo-s-python.md  01.03-installing-python-pyenv.md  01.03-ustanovka-python-pyenv.md  01.04-Sozdaniye virtual'nogo okruzheniya, upravleniye paketami i zavisimostyami - poetry + venv.md  01.04-poetry-sovremennyy-menedzher-zavisimostey.md  01.04-sozdaniye-virtualnogo-okruzheniya-upravleniye-paketami-i-zavisimostyami-poetry-venv.md  01.05-redaktor-ide-dlya-Python.md  01.06-rezhimy-vypolneniya-komand-perekhodim-v-visual-studio-code.md
learn-python-selfedu/02-moi-pervyye-shagi-v-python/: 02-moi-pervyye-shagi-v-python.md  02.01-peremennyye-operator-prisvaivaniya-funktsii-type-i-id.md  02.02-chisla-i-operatsii-nad-nimi.md  02.03-matematicheskiye-funktsii-i-modul-math.md  02.04-funktsii-print-i-input.md  02.05-logicheskiy-tip-bool-operatory-sravneniya.md
learn-python-selfedu/03-postizheniye-strok-i-spiskov/: 03-postizheniye-strok-i-spiskov.md  03.01-vvedeniye-v-stroki-operatsii-nad-strokami.md  03.02-indeksy-i-srezy-strok.md  03.03-osnovnyye-metody-strok.md  03.04-spetssimvoly-i-ekranirovaniye-simvolov.md  03.05-formatirovaniye-strok-i-f-stroki.md  03.06-spiski-i-operatsii-nad-nimi.md  03.07-srezy-spiskov-operatory-sravneniya-spiskov.md  03.08-metody-spiskov.md  03.09-vlozhennyye-spiski.md
learn-python-selfedu/04-uslovnyye-operatory/: 04-uslovnyye-operatory.md  04.01-uslovnyy-operator-if-konstruktsiya-if-else.md  04.02-vlozhennyye-usloviya-i-mnozhestvennyy-vybor. Konstruktsiya-if-elif-else.md  04.03-ternarnyy-uslovnyy-operator.md
learn-python-selfedu/05-tsikly-iteratory-i-generatory spiskov/: 05-tsikly-iteratory-i-generatory spiskov.md  05.01-operator-tsikla-while.md  05.02-operatory-break-continue-i-else.md  05.03-operator-tsikla-for-i-funktsiya-range.md  05.04-primery-raboty-operatora-tsikla-for-funktsiya-enumerate.md  05.05-iterator-i-iteriruyemyye-ob"yekty-funktsii-iter-i-next.md  05.06-vlozhennyye-tsikly.md  05.07-treugol'nik-paskalya-kak-primer-raboty-vlozhennykh-tsiklov.md  05.08-generatory-spiskov-list-comprehension.md  05.09-vlozhennyye-tsikly-i-vlozhennyye-generatory-spiskov.md
learn-python-selfedu/06-slovari-kortezhi-i-mnozhestva/: 06-slovari-kortezhi-i-mnozhestva.md  06.01-vvedeniye-v-slovari-(dict)-bazovyye-operatsii-nad-slovaryami.md  06.02-metody-slovarya-perebor-yego-elementov-v-tsikle.md  06.03-tuples-and-their-methods.md  06.04-mnozhestva-(set)-i-ikh-metody.md  06.05-operatsii-nad-mnozhestvami-sravneniye-mnozhestv.md  06.06-generatory-mnozhestv-i-generatory-slovarey.md
learn-python-selfedu/07-funktsii/: 07-funktsii.md  07.01-chto-takoye-funktsii-ikh-ob"yavleniye-i-vyzov.md  07.02-operator-return-v-funktsiyakh-funktsional'noye-programmirovaniye.md  07.03-algoritm-yevklida-dlya-nakhozhdeniya-NOD.md  07.04-imenovannye-argumenty-fakticheskie-i-formalnye-parametry.md  07.05-funkcii-s-proizvolnym-chislom-parametrov.md
messager/: main-test-1.py  main-test-2.py
messager/1-day/: main.py
messenger/: test.py
python/: python.html  spisok-materialov.html
test/: test.css  test.html  test.js  test.py  test_01.py
(+906 files in other folders)
