[project]
name = "learn-python"
version = "0.1.0"
description = "Изучение Python."
authors = [{ name = "vasil4enko-vs", email = "vvs170@gmail.com" }]
license = "CC BY 4.0"
dependencies = []
readme = "README.md"
requires-python = ">= 3.13"

[tool.uv]
managed = true
# virtual = true
dev-dependencies = []
